--- a/src/app/components/convertidor/convertidor.component.html
+++ b/src/app/components/convertidor/convertidor.component.html
@@ -1,1 +1,15 @@
-<p>convertidor works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            INPUT
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            TENGO
+        </div>
+        <div class="col-lg-6">
+            QUIERO
+        </div>
+    </div>
+</div>
