--- a/src/app/components/convertidor/convertidor.component.html
+++ b/src/app/components/convertidor/convertidor.component.html
@@ -1,15 +1,40 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            INPUT
+            <div class="form-group">
+                <label for="cantidad">Ingrese cantidad</label>
+                <input  type="number" 
+                        class="form-control form-control-lg" 
+                        id="cantidad" 
+                        placeholder="Ingrese cantidad..."
+                >
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6">
-            TENGO
+            <div class="form-group">
+                <label for="tengo">Tengo</label>
+                <select class="form-control form-control-lg" id="tengo">
+                    <option>USD</option>
+                    <option>EUR</option>
+                    <option>LIBRA</option>
+                </select>
+            </div>
         </div>
         <div class="col-lg-6">
-            QUIERO
+            <div class="form-group">
+                <label for="quiero">Quiero</label>
+                <select class="form-control form-control-lg" id="quiero">
+                    <option>USD</option>
+                    <option>EUR</option>
+                    <option>LIBRA</option>
+                    <option>USD</option>
+                    <option>EUR</option>
+                    <option>LIBRA</option>
+                </select>
+            </div>
         </div>
     </div>
+    <h5 class="text-center">1000 USD son 800 EUR</h5>
 </div>
