--- a/src/app/components/convertidor/convertidor.component.html
+++ b/src/app/components/convertidor/convertidor.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container mt-5 border">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-8 offset-lg-2">
             <div class="form-group">
-                <label for="cantidad">Ingrese cantidad</label>
+                <label for="cantidad" class="my-2">Ingrese cantidad</label>
                 <input  type="number" 
                         class="form-control form-control-lg" 
                         id="cantidad" 
@@ -12,9 +12,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-4 offset-lg-2">
             <div class="form-group">
-                <label for="tengo">Tengo</label>
+                <label for="tengo" class="my-3">Tengo</label>
                 <select class="form-control form-control-lg" id="tengo">
                     <option>USD</option>
                     <option>EUR</option>
@@ -22,9 +22,9 @@
                 </select>
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
             <div class="form-group">
-                <label for="quiero">Quiero</label>
+                <label for="quiero" class="my-3">Quiero</label>
                 <select class="form-control form-control-lg" id="quiero">
                     <option>USD</option>
                     <option>EUR</option>
@@ -33,5 +33,9 @@
             </div>
         </div>
     </div>
-    <h5 class="text-center">1000 USD son 800 EUR</h5>
+    <h5 class="text-center mt-3">
+        <span class="badge bg-success">1000 USD</span>
+        <span class="badge bg-secondary ms-2">SON</span>
+        <span class="badge bg-success ms-2">800 EUR</span>
+    </h5>
 </div>
