--- a/src/app/components/convertidor/convertidor.component.html
+++ b/src/app/components/convertidor/convertidor.component.html
@@ -1,41 +1,45 @@
-<div class="container mt-5 border">
+<div class="container mt-5">
     <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-            <div class="form-group">
-                <label for="cantidad" class="my-2">Ingrese cantidad</label>
-                <input  type="number" 
-                        class="form-control form-control-lg" 
-                        id="cantidad" 
-                        placeholder="Ingrese cantidad..."
-                >
+        <div class="col-lg-8 border offset-lg-2 p-4 shadow-lg rounded bg-light">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <label for="cantidad" class="my-2">Ingrese cantidad</label>
+                        <input  type="number" 
+                                class="form-control form-control-lg" 
+                                id="cantidad" 
+                                placeholder="Ingrese cantidad..."
+                        >
+                    </div>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        <label for="tengo" class="my-3">Tengo</label>
+                        <select class="form-control form-control-lg" id="tengo">
+                            <option>USD</option>
+                            <option>EUR</option>
+                            <option>LIBRA</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        <label for="quiero" class="my-3">Quiero</label>
+                        <select class="form-control form-control-lg" id="quiero">
+                            <option>USD</option>
+                            <option>EUR</option>
+                            <option>LIBRA</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <h5 class="text-center mt-3">
+                <span class="badge bg-success shadow m-1 fs-5">1000 USD</span>
+                <span class="badge bg-secondary shadow m-1 fs-5">SON</span>
+                <span class="badge bg-success shadow m-1 fs-5">800 EUR</span>
+            </h5>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-4 offset-lg-2">
-            <div class="form-group">
-                <label for="tengo" class="my-3">Tengo</label>
-                <select class="form-control form-control-lg" id="tengo">
-                    <option>USD</option>
-                    <option>EUR</option>
-                    <option>LIBRA</option>
-                </select>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="form-group">
-                <label for="quiero" class="my-3">Quiero</label>
-                <select class="form-control form-control-lg" id="quiero">
-                    <option>USD</option>
-                    <option>EUR</option>
-                    <option>LIBRA</option>
-                </select>
-            </div>
-        </div>
-    </div>
-    <h5 class="text-center mt-3">
-        <span class="badge bg-success">1000 USD</span>
-        <span class="badge bg-secondary ms-2">SON</span>
-        <span class="badge bg-success ms-2">800 EUR</span>
-    </h5>
 </div>
