--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url('./assets/img/61.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
