--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 body {
-    background-image: url('./assets/img/61.jpg');
+    
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('./assets/img/61.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
+    height: 100vh;
 }
