--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark py-4">
+<nav class="navbar navbar-dark bg-dark py-4 shadow">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">App Convertidor</span>
     </div>
